[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-monitoring"
version = "0.0.1"
dependencies = [
    "fastapi~=0.103.0",
    "python-multipart~=0.0.6",
    "pydantic~=2.0",
    "pydantic-settings~=2.0.3",
    "SQLAlchemy~=2.0.2",
    "uvicorn==0.21.1",
    "python-dotenv~=1.0.0",
    "asyncpg~=0.27.0",
    "greenlet~=2.0.2",
    "fastapi-asyncapi~=0.1.0",
]


[project.optional-dependencies]
test = [
    "pytest~=7.2.2",
    "pytest-asyncio~=0.20.3",
]


[project.scripts]
warehouse-monitoring-api = "warehouse_monitoring.main.api:main"
warehouse-emulator-preview-api = "warehouse_monitoring.main.emulator_preview:main"
